# FormalizedMusic_Xenakis

./: .gitignore  README.md  analogique_a_demo_20251026_161017.mid  cloud_sieve_demo_20251025_164908.mid  demo_sieve.mid  demo_sieve_20251025_113127.mid  pyproject.toml
scenes/: default.yaml
scripts/: demo_sieves_to_midi.py
utests/: test_mkv_analogique_a.py  test_mkv_screens.py  test_sieve_v2.py  test_stochastic_cloud.py
xenakis_py/: cli_render.py  dss_gendy.py  markov.py  midi_out.py  mkv_analogique_a.py  mkv_analogique_b.py  mkv_screens.py  render.py  sieve.py  stochastic.py  upic_draw.py  upic_main.py
xenakis_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
xenakis_py/scenes/: UPIC_Live_Instructions.txt  default.yaml  upic.scd  upic_demo.yaml  upic_live.scd
xenakis_py/scripts/: demo_cloud_sieve_midi.py  demo_dss_gendy.py  demo_sieves_to_midi.py  demo_upic.py  demo_upic_live.py  demo_upic_live_v2.py  export_cloud_to_midi.py
xenakis_py/webui/: canvas.html  webui_render.py
