[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xenakis-py"
version = "0.0.1"
description = "Xenakis-inspired generative composition engines"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = ["xenakis_py"]
